// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionSheet Snap render initial ActionSheet 1`] = `
<view
  class="at-action-sheet"
>
  <!-- overlay -->
  <view
    class="at-action-sheet__overlay"
  />
  <!-- container -->
  <view
    class="at-action-sheet__container"
  >
    <!-- title -->
    <!--v-if-->
    <!-- body -->
    <view
      class="at-action-sheet__body"
    >
      
      
      &lt;AtActionSheetItem&gt;按钮一&lt;/AtActionSheetItem&gt;
      &lt;AtActionSheetItem&gt;按钮二&lt;/AtActionSheetItem&gt;
      
      
    </view>
    <!-- footer -->
    <!--v-if-->
  </view>
</view>
`;

exports[`ActionSheet Snap render opened ActionSheet -- props cancelText 1`] = `
<view
  class="at-action-sheet at-action-sheet--active"
>
  <!-- overlay -->
  <view
    class="at-action-sheet__overlay"
  />
  <!-- container -->
  <view
    class="at-action-sheet__container"
  >
    <!-- title -->
    <!--v-if-->
    <!-- body -->
    <view
      class="at-action-sheet__body"
    >
      
      
      &lt;AtActionSheetItem&gt;按钮一&lt;/AtActionSheetItem&gt;
      &lt;AtActionSheetItem&gt;按钮二&lt;/AtActionSheetItem&gt;
      
      
    </view>
    <!-- footer -->
    <view
      class="at-action-sheet__footer"
    >
      
      取消
      
    </view>
  </view>
</view>
`;

exports[`ActionSheet Snap render opened ActionSheet -- props completed 1`] = `
<view
  class="at-action-sheet at-action-sheet--active"
>
  <!-- overlay -->
  <view
    class="at-action-sheet__overlay"
  />
  <!-- container -->
  <view
    class="at-action-sheet__container"
  >
    <!-- title -->
    <view
      class="at-action-sheet__header"
    >
      
      清除位置信息后， 别人将不能查看到你
可以通过转义字符换行
      
    </view>
    <!-- body -->
    <view
      class="at-action-sheet__body"
    >
      
      
      &lt;AtActionSheetItem&gt;按钮一&lt;/AtActionSheetItem&gt;
      &lt;AtActionSheetItem&gt;按钮二&lt;/AtActionSheetItem&gt;
      
      
    </view>
    <!-- footer -->
    <view
      class="at-action-sheet__footer"
    >
      
      取消
      
    </view>
  </view>
</view>
`;

exports[`ActionSheet Snap render opened ActionSheet -- props title 1`] = `
<view
  class="at-action-sheet at-action-sheet--active"
>
  <!-- overlay -->
  <view
    class="at-action-sheet__overlay"
  />
  <!-- container -->
  <view
    class="at-action-sheet__container"
  >
    <!-- title -->
    <view
      class="at-action-sheet__header"
    >
      
      清除位置信息后， 别人将不能查看到你
可以通过转义字符换行
      
    </view>
    <!-- body -->
    <view
      class="at-action-sheet__body"
    >
      
      
      &lt;AtActionSheetItem&gt;按钮一&lt;/AtActionSheetItem&gt;
      &lt;AtActionSheetItem&gt;按钮二&lt;/AtActionSheetItem&gt;
      
      
    </view>
    <!-- footer -->
    <!--v-if-->
  </view>
</view>
`;

exports[`ActionSheet Snap render opened ActionSheet 1`] = `
<view
  class="at-action-sheet at-action-sheet--active"
>
  <!-- overlay -->
  <view
    class="at-action-sheet__overlay"
  />
  <!-- container -->
  <view
    class="at-action-sheet__container"
  >
    <!-- title -->
    <!--v-if-->
    <!-- body -->
    <view
      class="at-action-sheet__body"
    >
      
      
      &lt;AtActionSheetItem&gt;按钮一&lt;/AtActionSheetItem&gt;
      &lt;AtActionSheetItem&gt;按钮二&lt;/AtActionSheetItem&gt;
      
      
    </view>
    <!-- footer -->
    <!--v-if-->
  </view>
</view>
`;
